k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: fastapi-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: fastapi-app

  template:
    metadata:
      labels:
        app: fastapi-app

    spec:
      containers:
      - name: fastapi-app
        image: cloud-api
        imagePullPolicy: Never  
        ports:
        - containerPort: 8000

        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"

          limits:
            memory: "256Mi"
            cpu: "300m"

        readinessProbe:
          httpGet:
            path: /health
            port: 8000

        livenessProbe:
          httpGet:
            path: /health
            port: 8000
