k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: fastapi-service

spec:
  selector:
    app: fastapi-app

  ports:
    - port: 80
      targetPort: 8000

  type: ClusterIP
